Colocado as Tarefas do Kernel do linux e do userspace… funcionando apenas no processador 0.
SEM LOGS NO SCHED.

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Linux/x86_64 2.6.38.8-rtai Kernel Configuration
-# Mon Dec 16 09:44:08 2013
+# Linux/x86_64 2.6.38.8 Kernel Configuration
+# Sun Jan  5 21:19:24 2014
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -111,6 +111,7 @@ CONFIG_SPARSE_IRQ=y
 #
 # RCU Subsystem
 #
+# CONFIG_TREE_RCU is not set
 CONFIG_TREE_PREEMPT_RCU=y
 CONFIG_PREEMPT_RCU=y
 # CONFIG_RCU_TRACE is not set
@@ -224,7 +225,7 @@ CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
-# CONFIG_MODULE_SRCVERSION_ALL is not set
+CONFIG_MODULE_SRCVERSION_ALL=y
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_BLK_DEV_BSG=y
@@ -235,10 +236,12 @@ CONFIG_BLOCK_COMPAT=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_DEADLINE=m
-CONFIG_IOSCHED_CFQ=m
-CONFIG_DEFAULT_NOOP=y
-CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_CFQ=y
+# CONFIG_DEFAULT_DEADLINE is not set
+CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_PREEMPT_NOTIFIERS=y
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
@@ -475,7 +478,7 @@ CONFIG_SFI=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
-CONFIG_CPU_FREQ_DEBUG=y
+# CONFIG_CPU_FREQ_DEBUG is not set
 CONFIG_CPU_FREQ_STAT=m
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
@@ -1389,7 +1392,7 @@ CONFIG_PARPORT_AX88796=m
 CONFIG_PARPORT_1284=y
 CONFIG_PARPORT_NOT_PC=y
 CONFIG_PNP=y
-# CONFIG_PNP_DEBUG_MESSAGES is not set
+CONFIG_PNP_DEBUG_MESSAGES=y
 
 #
 # Protocols
@@ -5282,3 +5285,8 @@ CONFIG_CHECK_SIGNATURE=y
 CONFIG_NLATTR=y
 CONFIG_LRU_CACHE=m
 CONFIG_AVERAGE=y
+
+#
+# CONFIGURACOES DO RAWLINSON HEHEH :P
+#
+CONFIG_RAWLINSON_DEBUG=y
