--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -87,6 +87,15 @@ config CPU_FREQ_DEFAULT_GOV_USERSPACE
 	  program shall be able to set the CPU dynamically without having
 	  to enable the userspace governor manually.
 
+config CPU_FREQ_DEFAULT_GOV_RAW
+	bool "raw"
+	select CPU_FREQ_GOV_RAW
+	help
+	  Use the CPUFreq governor 'raw' as default. This allows
+	  you to set the CPU frequency manually or when a userspace (using real-time applications)
+	  program shall be able to set the CPU dynamically without having
+	  to enable the userspace governor manually.
+
 config CPU_FREQ_DEFAULT_GOV_ONDEMAND
 	bool "ondemand"
 	select CPU_FREQ_GOV_ONDEMAND
@@ -148,6 +157,11 @@ config CPU_FREQ_GOV_USERSPACE
 	  For details, take a look at <file:Documentation/cpu-freq/>.
 
 	  If in doubt, say Y.
+
+config CPU_FREQ_GOV_RAW
+	tristate "'raw' governor for userspace frequency scaling"
+	help
+	  Send your question by e-mail: rawlinson.goncalves@gmail.com
 
 config CPU_FREQ_GOV_ONDEMAND
 	tristate "'ondemand' cpufreq policy governor"
